fixed button spacing on phone

--- a/styles.css
+++ b/styles.css
@@ -122,6 +122,6 @@ button:hover {
         margin-bottom: 10px;
     }
     .container {
-        margin-bottom: 10px;
+        margin-bottom: 30px;
     }
   }
